--- a/recipes.html
+++ b/recipes.html
@@ -29,7 +29,8 @@
             <p> The finished product. Cookies are baked to perfection with a nice crisp exterior along with a gooey interior. If made correctly, these cookies are a perfect combination of chocoalatey, salty, and sweet. </p> 
             <img src="images/double_chocolate_chips.png" width = "400" alt="Chocolate chips">
             <p> You need semi-sweet chocolate chips because they add a slightly stronger choclate flavor to the cookie without an overpowering sweetness. </p>
-
+            <img src="images/restofingredients.jpeg" width = "400" alt="Baking ingredients">
+            <p> Here are some of the common ingredients used in the double chocolate chip cookies. These include eggs, butter, vanilla, flour, and brown sugar. Also, an ingredient not pictured is cocoa powder, which is needed to add the extra chocolate flavor. </p>
         
         </div>
         <div></div>
