--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Pets</title>
 </head>
 <body>
-    <a href = "#skip">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
+                <li><a href = "#skip">Skip to Main Content</a></li>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "pets.html">Pets</a></li>
                 <li><a href = "recipes.html">Recipes</a></li>
