CCP Part 1 DONE

--- a/recipes.html
+++ b/recipes.html
@@ -24,11 +24,13 @@
             <h2>Double Chocolate  Cookies</h2>
             
             <P>These cookies are not for the faint hearted, with their rich, chocolatey flavor, only true chocolate lovers should try to make these. They are not difficult to make, requiring simple household ingredients. </P>
-            <h3>Photo Gallery</h3>
+            <h3>Finished Product</h3>
             <img src="images/double_chocolate_cookies.png" width = "400" alt="Chocolate lovers">
-            <p> The finished product. Cookies are baked to perfection with a nice crisp exterior along with a gooey interior. If made correctly, these cookies are a perfect combination of chocoalatey, salty, and sweet. </p> 
+            <p> Cookies are baked to perfection with a nice crisp exterior along with a gooey interior. If made correctly, these cookies are a perfect combination of chocoalatey, salty, and sweet. </p> 
+            <h4> Semi-Sweet Chocolate Chips </h4>
             <img src="images/double_chocolate_chips.png" width = "400" alt="Chocolate chips">
             <p> You need semi-sweet chocolate chips because they add a slightly stronger choclate flavor to the cookie without an overpowering sweetness. </p>
+            <h5> The Baking Essentials </h5>
             <img src="images/restofingredients.jpeg" width = "400" alt="Baking ingredients">
             <p> Here are some of the common ingredients used in the double chocolate chip cookies. These include eggs, butter, vanilla, flour, and brown sugar. Also, an ingredient not pictured is cocoa powder, which is needed to add the extra chocolate flavor. </p>
         
