--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </nav>
     </header>
     <main id = "skip">
+        <h1>The Lifestyle</h1>
         <div>
             <p>Welcome to The LifeStyle, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
 
