--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         <h1>The Lifestyle</h1>
         <div>
             <p>Welcome to The LifeStyle, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
+            <h2> Armaan Bhaskar</h2>
+            <img src="images/armaan.jpg" width = "400" alt="Armaan Bhaskar">
+            <p>I am Armaan Bhaskar and I am a student at the University of Michigan. I have several different hobbies including but not limited to caring for my dog bacon, cooking my own recipes, and traveling the world.</p>
 
         </div>
 
-<div>I am Armaan Bhaskar and I am a student at the University of Michigan. I have several different hobbies including but not limited to caring for my dog bacon, cooking my own recipes, and traveling the world.</div>
     
         <div></div>
         <div></div>
